--- a/docs/locale/zh_CN/LC_MESSAGES/installation.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/installation.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Flask-PluginKit 3.0.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-22 14:21+0800\n"
+"POT-Creation-Date: 2021-09-02 21:16+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
+"Generated-By: Babel 2.8.0\n"
 
 #: ../../installation.rst:4
 msgid "Installation"
@@ -27,12 +27,10 @@ msgid "Python Version"
 msgstr "Python版本"
 
 #: ../../installation.rst:9
-#, fuzzy
 msgid ""
-"We recommend using the latest version of Python 3, although it is code "
-"written in 2.7. Flask-PluginKit supports Python 3.5 and newer, Python "
-"2.7, and PyPy."
-msgstr "推荐使用Python3+，虽然我是在2.7下开发的。Flask-PluginKit支持3.6及新版，2.7和pypy。"
+"We recommend using the latest version of Python 3. Flask-PluginKit "
+"supports Python 3.6 and newer, Python 2.7, and PyPy."
+msgstr "推荐使用Python3+。Flask-PluginKit支持3.6及新版，2.7和pypy。"
 
 #: ../../installation.rst:13
 msgid "Dependencies"
