--- a/docs/locale/zh_CN/LC_MESSAGES/tutorial/core.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/tutorial/core.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Flask-PluginKit 3.0.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-02 21:08+0800\n"
+"POT-Creation-Date: 2025-06-23 23:48+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.15.0\n"
 
 #: ../../tutorial/core.rst:2
 msgid "Plugin Core"
@@ -171,6 +171,14 @@ msgstr ""
 #: ../../tutorial/core.rst:125
 msgid "The plugin Status, enabled (default) or disabled."
 msgstr "插件状态，enabled (默认) 或 disabled。"
+
+#: ../../tutorial/core.rst:127
+msgid "``__app_verion__``"
+msgstr ""
+
+#: ../../tutorial/core.rst:129
+msgid "The plugin requires the version of Flask-PluginKit."
+msgstr "插件要求 Flask-PluginKit 的版本"
 
 #: ../../tutorial/core.rst:136
 msgid "register"
